RESOLVED FIXED290086
CSSFontFaceDescriptors.h: Fix has raw ptr member to ref-counted type
https://bugs.webkit.org/show_bug.cgi?id=290086
Summary CSSFontFaceDescriptors.h: Fix has raw ptr member to ref-counted type
Vitor Roriz
Reported 2025-03-19 22:35:04 PDT
CSSFontFaceDescriptors.h: Fix has raw ptr member to ref-counted type
Attachments
Radar WebKit Bug Importer
Comment 1 2025-03-19 22:35:16 PDT
Vitor Roriz
Comment 2 2025-03-19 22:36:16 PDT
EWS
Comment 3 2025-03-21 00:38:08 PDT
Committed 292464@main (9c633df8549c): <https://commits.webkit.org/292464@main> Reviewed commits have been landed. Closing PR #42734 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.