CSSFontFaceDescriptors.h: Replace raw ptr member to ref-counted type https://bugs.webkit.org/show_bug.cgi?id=290086 rdar://147469533

Reviewed by Geoffrey Garen.

* Source/WebCore/SaferCPPExpectations/NoUncountedMemberCheckerExpectations:
* Source/WebCore/css/CSSFontFaceDescriptors.cpp:
(WebCore::CSSFontFaceDescriptors::parentRule const):
* Source/WebCore/css/CSSFontFaceDescriptors.h:
* Source/WebCore/css/CSSFontFaceRule.h:

Canonical link: https://commits.webkit.org/292464@main